# yueyin

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: FRONTEND_ASSET_MANIFEST.md  FRONTEND_REPLICATION_SPEC.md  LOGIN_MODEL_WARNINGS.md  LOGIN_REFACTOR_PLAN.md  OFFICIAL_WEB_LOGIN_RESEARCH.md  REFACTOR_ROADMAP.md  SPLASH_EFFECT_OPTIMIZATION.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  music.rs
src-tauri/src/db/: mod.rs
src-tauri/src/services/: cookie.rs  crypto.rs  http_client.rs  mod.rs  netease.rs  qq.rs
src/components/: BottomBar.vue  HomeContent.vue  LoginModal.vue  LyricsPanel.vue  PlaylistPanel.vue  SearchArea.vue  SplashScreen.vue  TopRight.vue  WindowControls.vue
src/components/home/: HomeCardGrid.vue  HomeHero.vue  HomeRail.vue  types.ts
src/components/playlist/: PlaylistHeader.vue  PlaylistList.vue  PlaylistSourceTabs.vue  PlaylistTracks.vue
src/composables/: useDropFiles.ts  usePlayback.ts  useVisuals.ts
src/router/: index.ts
src/services/: audio-engine.ts  music.ts  visual-engine.ts
src/stores/: account.ts  lyrics.ts  player.ts  queue.ts  search.ts  settings.ts
src/styles/: main.css
src/types/: track.ts
src/utils/: animations.ts  lrc.ts
src/views/: HomeView.vue  PlayerView.vue
