[package]
name = "yueyin"
version = "0.1.0"
description = "悦音 - 沉浸式音乐播放器"
authors = ["yueyin"]
edition = "2021"

[lib]
name = "yueyin_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
