[package]
name = "yueyin"
version = "0.1.0"
description = "悦音 - 沉浸式音乐播放器"
authors = ["yueyin"]
edition = "2021"

[lib]
name = "yueyin_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "gzip"] }
tokio = { version = "1", features = ["full"] }
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
base64 = "0.22"
rand = "0.8"
num-bigint = "0.4"
num-traits = "0.2"
urlencoding = "2"
once_cell = "1"
md5 = "0.7"
